[package]
name = "eng_dict"
version = "0.1.0"
authors = []

[dependencies]
iron = "*"
router = "*"
handlebars-iron = "*"
params = "*"
reqwest = "*"
serde = "*"
serde_derive = "*"
serde_urlencoded = "*"
serde_json = "*"
mongodb = "*"
bson = "0.10.0"
staticfile = "*"
mount = "*"
rand = "0.5.3"
redis = "0.8.0"
